--- a/index.html
+++ b/index.html
@@ -20,14 +20,31 @@
     }
     .card {
       background: white;
-      padding: 20px;
+      padding: 16px;
       border-radius: 10px;
-      width: 90%;
-      max-width: 420px;
+      width: 95%;
+      max-width: 480px;
       color: #000080;
     }
-    h3 { text-align: center; margin-top: 0; }
-    label { display: block; margin-top: 10px; }
+    h3 { text-align: center; margin: 8px 0; }
+
+    .tabs {
+      display: flex;
+      margin-bottom: 10px;
+    }
+    .tab {
+      flex: 1;
+      text-align: center;
+      padding: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      border-bottom: 3px solid transparent;
+    }
+    .tab.active {
+      border-bottom: 3px solid #000080;
+    }
+
+    label { display: block; margin-top: 8px; font-size: 14px; }
     input, select {
       width: 100%;
       padding: 6px;
@@ -35,78 +52,92 @@
     }
     button {
       width: 100%;
-      margin-top: 12px;
+      margin-top: 10px;
       padding: 8px;
       background: #000080;
       color: white;
       border: none;
       cursor: pointer;
     }
-    .success { color: green; text-align: center; margin-top: 8px; }
-    .error { color: #b00000; text-align: center; margin-top: 8px; }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 12px;
+      margin-top: 8px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 4px;
+      text-align: center;
+    }
+    .success { color: green; text-align: center; margin-top: 6px; }
+    .error { color: #b00000; text-align: center; margin-top: 6px; }
+    .week-header {
+      margin-top: 10px;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 
 <body>
 
-<div class="card" id="loading">
-  <h3>Checking session…</h3>
-</div>
+<div class="card" id="loading"><h3>Checking session…</h3></div>
 
 <div class="card" id="login" style="display:none;">
   <h3>Login</h3>
-  <input id="email" placeholder="Email" autocomplete="off">
-  <input id="password" type="password" placeholder="Password" autocomplete="off">
+  <input id="email" placeholder="Email">
+  <input id="password" type="password">
   <button onclick="loginUser()">Login</button>
 </div>
 
 <div class="card" id="profile" style="display:none;">
   <h3>Profile Setup</h3>
-
   <label>Name</label>
-  <input id="profileName" autocomplete="off">
-
+  <input id="profileName">
   <label>Chanting Category</label>
   <select id="profileCategory">
-    <option value="">Select category</option>
-    <option value="0-4">0–4 rounds</option>
-    <option value="5-9">5–9 rounds</option>
-    <option value="10-16">10–16 rounds</option>
+    <option value="">Select</option>
+    <option value="0-4">0–4</option>
+    <option value="5-9">5–9</option>
+    <option value="10-16">10–16</option>
   </select>
-
   <button onclick="saveProfile()">Save Profile</button>
   <div id="profileError" class="error"></div>
 </div>
 
-<div class="card" id="sadhana" style="display:none;">
-  <h3>Daily Sadhana</h3>
+<div class="card" id="app" style="display:none;">
+  <div class="tabs">
+    <div class="tab active" onclick="showTab('sadhana')">Sadhana</div>
+    <div class="tab" onclick="showTab('reports')">Reports</div>
+  </div>
 
-  <label>Date</label>
-  <select id="date"></select>
+  <!-- SADHANA TAB -->
+  <div id="sadhanaTab">
+    <label>Date</label>
+    <select id="date"></select>
 
-  <label>Sleep Time</label>
-  <input type="time" id="sleep">
+    <label>Sleep</label><input type="time" id="sleep">
+    <label>Wake</label><input type="time" id="wake">
+    <label>Chanting</label><input type="time" id="chant">
+    <label>Reading (min)</label><input type="number" id="read">
+    <label>Hearing (min)</label><input type="number" id="hear">
+    <label>Day Sleep (min)</label><input type="number" id="daysleep">
 
-  <label>Wake Time</label>
-  <input type="time" id="wake">
+    <button onclick="submitSadhana()">Submit Sadhana</button>
+    <div id="msgSuccess" class="success"></div>
+    <div id="msgError" class="error"></div>
+    <button onclick="logoutUser()">Logout</button>
+  </div>
 
-  <label>Chanting Completion</label>
-  <input type="time" id="chant">
+  <!-- REPORTS TAB -->
+  <div id="reportsTab" style="display:none;">
+    <h3>Current Week</h3>
+    <div id="currentWeek"></div>
 
-  <label>Reading (minutes)</label>
-  <input type="number" id="read">
-
-  <label>Hearing (minutes)</label>
-  <input type="number" id="hear">
-
-  <label>Day Sleep (minutes)</label>
-  <input type="number" id="daysleep">
-
-  <button onclick="submitSadhana()">Submit Sadhana</button>
-  <div id="msgSuccess" class="success"></div>
-  <div id="msgError" class="error"></div>
-
-  <button onclick="logoutUser()">Logout</button>
+    <h3>Previous Weeks</h3>
+    <div id="previousWeeks"></div>
+  </div>
 </div>
 
 <script>
@@ -120,104 +151,107 @@
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
   const db = firebase.firestore();
-  let uid = null;
-
-  function clearSadhanaForm() {
-    sleep.value = wake.value = chant.value = read.value = hear.value = daysleep.value = "";
-  }
+  let uid;
 
   auth.onAuthStateChanged(async user => {
     loading.style.display = "none";
-
-    if (!user) {
-      login.style.display = "block";
-      profile.style.display = "none";
-      sadhana.style.display = "none";
-      return;
-    }
+    if (!user) { login.style.display="block"; return; }
 
     uid = user.uid;
-    login.style.display = "none";
-
-    const userDoc = await db.collection("users").doc(uid).get();
-    const data = userDoc.exists ? userDoc.data() : null;
-
-    if (!data || !data.name || !data.chantingCategory) {
-      profile.style.display = "block";
-      sadhana.style.display = "none";
-    } else {
-      profile.style.display = "none";
-      sadhana.style.display = "block";
-      setupDates();
-      clearSadhanaForm();
+    const doc = await db.collection("users").doc(uid).get();
+    if (!doc.exists || !doc.data().name || !doc.data().chantingCategory) {
+      profile.style.display="block"; return;
     }
+    app.style.display="block";
+    setupDates();
+    loadReports();
   });
 
-  function setupDates() {
-    date.innerHTML = "";
-    const today = new Date();
-    for (let i = 0; i <= 2; i++) {
-      const d = new Date(today);
-      d.setDate(today.getDate() - i);
-      const v = d.toISOString().slice(0,10);
-      const opt = document.createElement("option");
-      opt.value = v;
-      opt.text = v;
-      date.appendChild(opt);
+  function showTab(tab){
+    document.getElementById("sadhanaTab").style.display = tab==="sadhana"?"block":"none";
+    document.getElementById("reportsTab").style.display = tab==="reports"?"block":"none";
+    document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
+    event.target.classList.add("active");
+  }
+
+  function setupDates(){
+    date.innerHTML="";
+    const t=new Date();
+    for(let i=0;i<3;i++){
+      const d=new Date(t); d.setDate(t.getDate()-i);
+      date.innerHTML+=`<option>${d.toISOString().slice(0,10)}</option>`;
     }
   }
 
-  function loginUser() {
-    auth.signInWithEmailAndPassword(email.value, password.value)
-      .catch(err => alert(err.message));
+  async function loadReports(){
+    const snap = await db.collection("users").doc(uid).collection("sadhana").get();
+    const byWeek={};
+
+    snap.forEach(doc=>{
+      const dt=new Date(doc.id);
+      const sunday=new Date(dt); sunday.setDate(dt.getDate()-dt.getDay());
+      const key=sunday.toISOString().slice(0,10);
+      byWeek[key]=byWeek[key]||[];
+      byWeek[key].push({date:doc.id,...doc.data()});
+    });
+
+    const weeks=Object.keys(byWeek).sort().reverse();
+    renderTable(currentWeek, byWeek[weeks[0]]||[]);
+
+    previousWeeks.innerHTML="";
+    weeks.slice(1).forEach(w=>{
+      const div=document.createElement("div");
+      div.innerHTML=`<div class="week-header">${w}</div><div style="display:none"></div>`;
+      div.children[0].onclick=()=> {
+        const c=div.children[1];
+        c.style.display=c.style.display==="none"?"block":"none";
+        renderTable(c, byWeek[w]);
+      };
+      previousWeeks.appendChild(div);
+    });
   }
 
-  function logoutUser() {
-    auth.signOut();
+  function renderTable(el, data){
+    if(!data.length){ el.innerHTML="No data"; return; }
+    let h="<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>Day Sleep</th></tr>";
+    data.sort((a,b)=>a.date.localeCompare(b.date)).forEach(r=>{
+      h+=`<tr><td>${r.date}</td><td>${r.sleepTime}</td><td>${r.wakeTime}</td><td>${r.chantingTime}</td><td>${r.reading}</td><td>${r.hearing}</td><td>${r.daySleep}</td></tr>`;
+    });
+    el.innerHTML=h+"</table>";
   }
 
-  async function saveProfile() {
-    profileError.innerText = "";
-    if (!profileName.value || !profileCategory.value) {
-      profileError.innerText = "Name and chanting category are mandatory.";
-      return;
+  function loginUser(){ auth.signInWithEmailAndPassword(email.value,password.value); }
+  function logoutUser(){ auth.signOut(); }
+
+  async function saveProfile(){
+    if(!profileName.value||!profileCategory.value){
+      profileError.innerText="All fields mandatory"; return;
     }
-
     await db.collection("users").doc(uid).set({
       name: profileName.value,
-      chantingCategory: profileCategory.value,
-      updatedAt: new Date()
-    }, { merge: true });
-
-    profile.style.display = "none";
-    sadhana.style.display = "block";
-    setupDates();
-    clearSadhanaForm();
+      chantingCategory: profileCategory.value
+    },{merge:true});
+    location.reload();
   }
 
-  async function submitSadhana() {
-    msgSuccess.innerText = "";
-    msgError.innerText = "";
-
-    const values = [sleep.value, wake.value, chant.value, read.value, hear.value, daysleep.value];
-    if (values.some(v => v === "")) {
-      msgError.innerText = "All sadhana activities are compulsory.";
-      return;
+  async function submitSadhana(){
+    const vals=[sleep,wake,chant,read,hear,daysleep];
+    if(vals.some(v=>v.value==="")){
+      msgError.innerText="All fields compulsory"; return;
     }
-
     await db.collection("users").doc(uid)
       .collection("sadhana").doc(date.value)
       .set({
-        sleepTime: sleep.value,
-        wakeTime: wake.value,
-        chantingTime: chant.value,
-        reading: read.value,
-        hearing: hear.value,
-        daySleep: daysleep.value
+        sleepTime:sleep.value,
+        wakeTime:wake.value,
+        chantingTime:chant.value,
+        reading:read.value,
+        hearing:hear.value,
+        daySleep:daysleep.value
       });
-
-    msgSuccess.innerText = "Sadhana submitted successfully 🙏";
-    clearSadhanaForm();
+    msgSuccess.innerText="Sadhana submitted successfully 🙏";
+    vals.forEach(v=>v.value="");
+    loadReports();
   }
 </script>
 
