--- a/index.html
+++ b/index.html
@@ -25,24 +25,9 @@
       width: 95%;
       max-width: 520px;
       color: #000080;
+      margin-bottom: 16px;
     }
     h3 { text-align: center; margin: 8px 0; }
-
-    .tabs {
-      display: flex;
-      margin-bottom: 10px;
-    }
-    .tab {
-      flex: 1;
-      text-align: center;
-      padding: 8px;
-      cursor: pointer;
-      font-weight: bold;
-      border-bottom: 3px solid transparent;
-    }
-    .tab.active {
-      border-bottom: 3px solid #000080;
-    }
 
     label { display: block; margin-top: 8px; font-size: 14px; }
     input, select {
@@ -111,37 +96,44 @@
   <div id="profileError" class="error"></div>
 </div>
 
-<div class="card" id="app" style="display:none;">
-  <div class="tabs" id="tabs"></div>
+<div id="app" style="display:none; width:100%; max-width:520px;">
 
-  <div id="sadhanaTab">
+  <!-- SADHANA -->
+  <div class="card">
+    <h3>Daily Sadhana</h3>
+
     <label>Date</label>
     <select id="date"></select>
+
     <label>Sleep</label><input type="time" id="sleep">
     <label>Wake</label><input type="time" id="wake">
     <label>Chanting</label><input type="time" id="chant">
     <label>Reading (min)</label><input type="number" id="read">
     <label>Hearing (min)</label><input type="number" id="hear">
     <label>Day Sleep (min)</label><input type="number" id="daysleep">
+
     <button onclick="submitSadhana()">Submit Sadhana</button>
     <div id="msgSuccess" class="success"></div>
     <div id="msgError" class="error"></div>
     <button onclick="logoutUser()">Logout</button>
   </div>
 
-  <div id="reportsTab" style="display:none;">
+  <!-- REPORTS -->
+  <div class="card">
     <h3>Current Week</h3>
     <div id="currentWeek"></div>
     <h3>Previous Weeks</h3>
     <div id="previousWeeks"></div>
   </div>
 
-  <div id="adminTab" style="display:none;">
-    <h3>Users</h3>
+  <!-- ADMIN VIEW (ONLY FOR ADMIN) -->
+  <div class="card" id="adminSection" style="display:none;">
+    <h3>Admin – Users</h3>
     <div id="userList"></div>
     <h3 id="adminUserTitle"></h3>
     <div id="adminUserReports"></div>
   </div>
+
 </div>
 
 <script>
@@ -158,177 +150,142 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  let uid, isAdmin = false;
+  let uid, isAdmin=false;
 
-  function hideAllScreens() {
-    loading.style.display = "none";
-    login.style.display = "none";
-    profile.style.display = "none";
-    app.style.display = "none";
+  function hideAll(){
+    loading.style.display="none";
+    login.style.display="none";
+    profile.style.display="none";
+    app.style.display="none";
   }
 
-  auth.onAuthStateChanged(async user => {
-    hideAllScreens();
+  auth.onAuthStateChanged(async user=>{
+    hideAll();
 
-    if (!user) {
-      login.style.display = "block";
+    if(!user){
+      login.style.display="block";
       return;
     }
 
-    uid = user.uid;
+    uid=user.uid;
     isAdmin = user.email === ADMIN_EMAIL;
 
     const doc = await db.collection("users").doc(uid).get();
-
-    if (!doc.exists || !doc.data().name || !doc.data().chantingCategory) {
-      profile.style.display = "block";
+    if(!doc.exists || !doc.data().name || !doc.data().chantingCategory){
+      profile.style.display="block";
       return;
     }
 
-    app.style.display = "block";
-    setupTabs();
+    app.style.display="block";
     setupDates();
     loadReports(uid);
-    if (isAdmin) loadUsers();
+
+    if(isAdmin){
+      adminSection.style.display="block";
+      loadUsers();
+    }
   });
 
-  function setupTabs() {
-    tabs.innerHTML = "";
-    const tabNames = ["Sadhana", "Reports"];
-    if (isAdmin) tabNames.push("Admin");
-
-    tabNames.forEach((name, i) => {
-      const d = document.createElement("div");
-      d.className = "tab" + (i === 0 ? " active" : "");
-      d.innerText = name;
-      d.onclick = () => showTab(name.toLowerCase());
-      tabs.appendChild(d);
-    });
-
-    showTab("sadhana");
-  }
-
-  function showTab(tab) {
-    sadhanaTab.style.display = tab === "sadhana" ? "block" : "none";
-    reportsTab.style.display = tab === "reports" ? "block" : "none";
-    adminTab.style.display = tab === "admin" ? "block" : "none";
-
-    document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
-    event.target.classList.add("active");
-  }
-
-  function setupDates() {
-    date.innerHTML = "";
-    const today = new Date();
-    for (let i = 0; i < 3; i++) {
-      const d = new Date(today);
-      d.setDate(today.getDate() - i);
-      date.innerHTML += `<option>${d.toISOString().slice(0,10)}</option>`;
+  function setupDates(){
+    date.innerHTML="";
+    const t=new Date();
+    for(let i=0;i<3;i++){
+      const d=new Date(t);
+      d.setDate(t.getDate()-i);
+      date.innerHTML+=`<option>${d.toISOString().slice(0,10)}</option>`;
     }
   }
 
-  async function submitSadhana() {
-    const fields = [sleep, wake, chant, read, hear, daysleep];
-    if (fields.some(f => f.value === "")) {
-      msgError.innerText = "All fields compulsory";
+  async function submitSadhana(){
+    const f=[sleep,wake,chant,read,hear,daysleep];
+    if(f.some(x=>x.value==="")){
+      msgError.innerText="All fields compulsory";
       return;
     }
-
     await db.collection("users").doc(uid)
       .collection("sadhana").doc(date.value)
       .set({
-        sleepTime: sleep.value,
-        wakeTime: wake.value,
-        chantingTime: chant.value,
-        reading: read.value,
-        hearing: hear.value,
-        daySleep: daysleep.value
+        sleepTime:sleep.value,
+        wakeTime:wake.value,
+        chantingTime:chant.value,
+        reading:read.value,
+        hearing:hear.value,
+        daySleep:daysleep.value
       });
-
-    msgSuccess.innerText = "Sadhana submitted successfully 🙏";
-    fields.forEach(f => f.value = "");
+    msgSuccess.innerText="Sadhana submitted successfully 🙏";
+    f.forEach(x=>x.value="");
     loadReports(uid);
   }
 
-  async function loadReports(userId) {
-    const snap = await db.collection("users").doc(userId).collection("sadhana").get();
-    renderReports(snap, currentWeek, previousWeeks);
-  }
+  async function loadReports(userId){
+    const snap=await db.collection("users").doc(userId).collection("sadhana").get();
+    const byWeek={};
 
-  function renderReports(snap, currentEl, prevEl) {
-    const byWeek = {};
-    snap.forEach(doc => {
-      const dt = new Date(doc.id);
-      const sunday = new Date(dt);
-      sunday.setDate(dt.getDate() - dt.getDay());
-      const key = sunday.toISOString().slice(0,10);
-      byWeek[key] = byWeek[key] || [];
-      byWeek[key].push({ date: doc.id, ...doc.data() });
+    snap.forEach(doc=>{
+      const dt=new Date(doc.id);
+      const sunday=new Date(dt);
+      sunday.setDate(dt.getDate()-dt.getDay());
+      const key=sunday.toISOString().slice(0,10);
+      byWeek[key]=byWeek[key]||[];
+      byWeek[key].push({date:doc.id,...doc.data()});
     });
 
-    const weeks = Object.keys(byWeek).sort().reverse();
-    renderTable(currentEl, byWeek[weeks[0]] || []);
-    prevEl.innerHTML = "";
-
-    weeks.slice(1).forEach(w => {
-      const div = document.createElement("div");
-      div.innerHTML = `<div class="week-header">${w}</div><div style="display:none"></div>`;
-      div.children[0].onclick = () => {
-        const c = div.children[1];
-        c.style.display = c.style.display === "none" ? "block" : "none";
+    const weeks=Object.keys(byWeek).sort().reverse();
+    renderTable(currentWeek, byWeek[weeks[0]]||[]);
+    previousWeeks.innerHTML="";
+    weeks.slice(1).forEach(w=>{
+      const div=document.createElement("div");
+      div.innerHTML=`<div class="week-header">${w}</div><div style="display:none"></div>`;
+      div.children[0].onclick=()=>{
+        const c=div.children[1];
+        c.style.display=c.style.display==="none"?"block":"none";
         renderTable(c, byWeek[w]);
       };
-      prevEl.appendChild(div);
+      previousWeeks.appendChild(div);
     });
   }
 
-  function renderTable(el, data) {
-    if (!data.length) { el.innerHTML = "No data"; return; }
-    let html = "<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>Day Sleep</th></tr>";
-    data.sort((a,b) => a.date.localeCompare(b.date)).forEach(r => {
-      html += `<tr><td>${r.date}</td><td>${r.sleepTime}</td><td>${r.wakeTime}</td><td>${r.chantingTime}</td><td>${r.reading}</td><td>${r.hearing}</td><td>${r.daySleep}</td></tr>`;
+  function renderTable(el,data){
+    if(!data.length){ el.innerHTML="No data"; return; }
+    let h="<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>Day Sleep</th></tr>";
+    data.sort((a,b)=>a.date.localeCompare(b.date)).forEach(r=>{
+      h+=`<tr><td>${r.date}</td><td>${r.sleepTime}</td><td>${r.wakeTime}</td><td>${r.chantingTime}</td><td>${r.reading}</td><td>${r.hearing}</td><td>${r.daySleep}</td></tr>`;
     });
-    el.innerHTML = html + "</table>";
+    el.innerHTML=h+"</table>";
   }
 
-  async function loadUsers() {
-    const snap = await db.collection("users").get();
-    userList.innerHTML = "";
-    snap.forEach(doc => {
-      const d = doc.data();
-      const row = document.createElement("div");
-      row.className = "user-row";
-      row.innerText = `${d.name} (${d.chantingCategory || "-"})`;
-      row.onclick = () => viewUser(doc.id, d.name);
+  async function loadUsers(){
+    const snap=await db.collection("users").get();
+    userList.innerHTML="";
+    snap.forEach(doc=>{
+      const d=doc.data();
+      const row=document.createElement("div");
+      row.className="user-row";
+      row.innerText=`${d.name} (${d.chantingCategory||"-"})`;
+      row.onclick=()=>viewUser(doc.id,d.name);
       userList.appendChild(row);
     });
   }
 
-  async function viewUser(userId, name) {
-    adminUserTitle.innerText = name + "'s Reports";
-    const snap = await db.collection("users").doc(userId).collection("sadhana").get();
-    renderReports(snap, adminUserReports, document.createElement("div"));
+  async function viewUser(id,name){
+    adminUserTitle.innerText=name+"'s Reports";
+    const snap=await db.collection("users").doc(id).collection("sadhana").get();
+    renderTable(adminUserReports, snap.docs.map(d=>({date:d.id,...d.data()})));
   }
 
-  function loginUser() {
-    auth.signInWithEmailAndPassword(email.value, password.value);
+  function loginUser(){
+    auth.signInWithEmailAndPassword(email.value,password.value);
   }
+  function logoutUser(){ auth.signOut(); }
 
-  function logoutUser() {
-    auth.signOut();
-  }
-
-  async function saveProfile() {
-    if (!profileName.value || !profileCategory.value) {
-      profileError.innerText = "All fields mandatory";
-      return;
+  async function saveProfile(){
+    if(!profileName.value||!profileCategory.value){
+      profileError.innerText="All fields mandatory";return;
     }
-
     await db.collection("users").doc(uid).set({
-      name: profileName.value,
-      chantingCategory: profileCategory.value
-    }, { merge: true });
-
+      name:profileName.value,
+      chantingCategory:profileCategory.value
+    },{merge:true});
     location.reload();
   }
 </script>
