--- a/index.html
+++ b/index.html
@@ -25,54 +25,19 @@
       width: 95%;
       max-width: 520px;
       color: #000080;
-      margin-bottom: 16px;
     }
-    h3 { text-align: center; margin: 8px 0; }
-
-    label { display: block; margin-top: 8px; font-size: 14px; }
-    input, select {
-      width: 100%;
-      padding: 6px;
-      margin-top: 4px;
-    }
-    button {
-      width: 100%;
-      margin-top: 10px;
-      padding: 8px;
-      background: #000080;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 12px;
-      margin-top: 8px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 4px;
-      text-align: center;
-    }
-    .success { color: green; text-align: center; margin-top: 6px; }
-    .error { color: #b00000; text-align: center; margin-top: 6px; }
-    .week-header {
-      margin-top: 10px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .user-row {
-      padding: 6px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-    }
+    h3 { text-align: center; }
+    label { display:block; margin-top:8px; }
+    input, select { width:100%; padding:6px; margin-top:4px; }
+    button { width:100%; margin-top:10px; padding:8px; background:#000080; color:white; border:none; }
+    .error { color:#b00000; text-align:center; }
+    .success { color:green; text-align:center; }
   </style>
 </head>
 
 <body>
 
-<div class="card" id="loading"><h3>Checking session…</h3></div>
+<div class="card" id="loading">Checking session…</div>
 
 <div class="card" id="login" style="display:none;">
   <h3>Login</h3>
@@ -92,53 +57,30 @@
     <option value="5-9">5–9</option>
     <option value="10-16">10–16</option>
   </select>
-  <button onclick="saveProfile()">Save Profile</button>
+  <button onclick="saveProfile()">Save</button>
   <div id="profileError" class="error"></div>
 </div>
 
-<div id="app" style="display:none; width:100%; max-width:520px;">
+<div class="card" id="app" style="display:none;">
+  <h3>Daily Sadhana</h3>
 
-  <!-- SADHANA -->
-  <div class="card">
-    <h3>Daily Sadhana</h3>
+  <label>Date</label>
+  <select id="date"></select>
 
-    <label>Date</label>
-    <select id="date"></select>
+  <label>Sleep</label><input type="time" id="sleep">
+  <label>Wake</label><input type="time" id="wake">
+  <label>Chanting</label><input type="time" id="chant">
+  <label>Reading (min)</label><input type="number" id="read">
+  <label>Hearing (min)</label><input type="number" id="hear">
+  <label>Day Sleep (min)</label><input type="number" id="daysleep">
 
-    <label>Sleep</label><input type="time" id="sleep">
-    <label>Wake</label><input type="time" id="wake">
-    <label>Chanting</label><input type="time" id="chant">
-    <label>Reading (min)</label><input type="number" id="read">
-    <label>Hearing (min)</label><input type="number" id="hear">
-    <label>Day Sleep (min)</label><input type="number" id="daysleep">
-
-    <button onclick="submitSadhana()">Submit Sadhana</button>
-    <div id="msgSuccess" class="success"></div>
-    <div id="msgError" class="error"></div>
-    <button onclick="logoutUser()">Logout</button>
-  </div>
-
-  <!-- REPORTS -->
-  <div class="card">
-    <h3>Current Week</h3>
-    <div id="currentWeek"></div>
-    <h3>Previous Weeks</h3>
-    <div id="previousWeeks"></div>
-  </div>
-
-  <!-- ADMIN VIEW (ONLY FOR ADMIN) -->
-  <div class="card" id="adminSection" style="display:none;">
-    <h3>Admin – Users</h3>
-    <div id="userList"></div>
-    <h3 id="adminUserTitle"></h3>
-    <div id="adminUserReports"></div>
-  </div>
-
+  <button onclick="submitSadhana()">Submit</button>
+  <div id="msgError" class="error"></div>
+  <div id="msgSuccess" class="success"></div>
+  <button onclick="logoutUser()">Logout</button>
 </div>
 
 <script>
-  const ADMIN_EMAIL = "riyagupta9872@gmail.com";
-
   const firebaseConfig = {
     apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
     authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
@@ -150,7 +92,8 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  let uid, isAdmin=false;
+  let uid;
+  let datesInitialized = false;
 
   function hideAll(){
     loading.style.display="none";
@@ -161,47 +104,46 @@
 
   auth.onAuthStateChanged(async user=>{
     hideAll();
+    if(!user){ login.style.display="block"; return; }
 
-    if(!user){
-      login.style.display="block";
-      return;
-    }
-
-    uid=user.uid;
-    isAdmin = user.email === ADMIN_EMAIL;
-
+    uid = user.uid;
     const doc = await db.collection("users").doc(uid).get();
+
     if(!doc.exists || !doc.data().name || !doc.data().chantingCategory){
-      profile.style.display="block";
-      return;
+      profile.style.display="block"; return;
     }
 
     app.style.display="block";
-    setupDates();
-    loadReports(uid);
-
-    if(isAdmin){
-      adminSection.style.display="block";
-      loadUsers();
-    }
+    setupDatesOnce();
   });
 
-  function setupDates(){
-    date.innerHTML="";
-    const t=new Date();
+  function setupDatesOnce(){
+    if(datesInitialized) return;
+    datesInitialized = true;
+
+    const today = new Date();
     for(let i=0;i<3;i++){
-      const d=new Date(t);
-      d.setDate(t.getDate()-i);
-      date.innerHTML+=`<option>${d.toISOString().slice(0,10)}</option>`;
+      const d = new Date(today);
+      d.setDate(today.getDate()-i);
+      const opt = document.createElement("option");
+      opt.value = d.toISOString().slice(0,10);
+      opt.textContent = opt.value;
+      date.appendChild(opt);
     }
   }
 
   async function submitSadhana(){
-    const f=[sleep,wake,chant,read,hear,daysleep];
-    if(f.some(x=>x.value==="")){
+    if(!date.value){
+      msgError.innerText="Please select date";
+      return;
+    }
+
+    const fields=[sleep,wake,chant,read,hear,daysleep];
+    if(fields.some(f=>f.value==="")){
       msgError.innerText="All fields compulsory";
       return;
     }
+
     await db.collection("users").doc(uid)
       .collection("sadhana").doc(date.value)
       .set({
@@ -212,81 +154,25 @@
         hearing:hear.value,
         daySleep:daysleep.value
       });
+
     msgSuccess.innerText="Sadhana submitted successfully 🙏";
-    f.forEach(x=>x.value="");
-    loadReports(uid);
+    fields.forEach(f=>f.value="");
   }
 
-  async function loadReports(userId){
-    const snap=await db.collection("users").doc(userId).collection("sadhana").get();
-    const byWeek={};
-
-    snap.forEach(doc=>{
-      const dt=new Date(doc.id);
-      const sunday=new Date(dt);
-      sunday.setDate(dt.getDate()-dt.getDay());
-      const key=sunday.toISOString().slice(0,10);
-      byWeek[key]=byWeek[key]||[];
-      byWeek[key].push({date:doc.id,...doc.data()});
-    });
-
-    const weeks=Object.keys(byWeek).sort().reverse();
-    renderTable(currentWeek, byWeek[weeks[0]]||[]);
-    previousWeeks.innerHTML="";
-    weeks.slice(1).forEach(w=>{
-      const div=document.createElement("div");
-      div.innerHTML=`<div class="week-header">${w}</div><div style="display:none"></div>`;
-      div.children[0].onclick=()=>{
-        const c=div.children[1];
-        c.style.display=c.style.display==="none"?"block":"none";
-        renderTable(c, byWeek[w]);
-      };
-      previousWeeks.appendChild(div);
-    });
-  }
-
-  function renderTable(el,data){
-    if(!data.length){ el.innerHTML="No data"; return; }
-    let h="<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>Day Sleep</th></tr>";
-    data.sort((a,b)=>a.date.localeCompare(b.date)).forEach(r=>{
-      h+=`<tr><td>${r.date}</td><td>${r.sleepTime}</td><td>${r.wakeTime}</td><td>${r.chantingTime}</td><td>${r.reading}</td><td>${r.hearing}</td><td>${r.daySleep}</td></tr>`;
-    });
-    el.innerHTML=h+"</table>";
-  }
-
-  async function loadUsers(){
-    const snap=await db.collection("users").get();
-    userList.innerHTML="";
-    snap.forEach(doc=>{
-      const d=doc.data();
-      const row=document.createElement("div");
-      row.className="user-row";
-      row.innerText=`${d.name} (${d.chantingCategory||"-"})`;
-      row.onclick=()=>viewUser(doc.id,d.name);
-      userList.appendChild(row);
-    });
-  }
-
-  async function viewUser(id,name){
-    adminUserTitle.innerText=name+"'s Reports";
-    const snap=await db.collection("users").doc(id).collection("sadhana").get();
-    renderTable(adminUserReports, snap.docs.map(d=>({date:d.id,...d.data()})));
-  }
-
-  function loginUser(){
-    auth.signInWithEmailAndPassword(email.value,password.value);
-  }
+  function loginUser(){ auth.signInWithEmailAndPassword(email.value,password.value); }
   function logoutUser(){ auth.signOut(); }
 
   async function saveProfile(){
-    if(!profileName.value||!profileCategory.value){
-      profileError.innerText="All fields mandatory";return;
+    if(!profileName.value || !profileCategory.value){
+      profileError.innerText="All fields mandatory"; return;
     }
     await db.collection("users").doc(uid).set({
-      name:profileName.value,
-      chantingCategory:profileCategory.value
+      name: profileName.value,
+      chantingCategory: profileCategory.value
     },{merge:true});
-    location.reload();
+    hideAll();
+    app.style.display="block";
+    setupDatesOnce();
   }
 </script>
 
